welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:26: error: ':' expected but ')' found.
def recule(k){
            ^FlowerPot:43: error: identifier expected but '}' found.
}
^