welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlowers{
  faireFleur(Color.RED);avance(3);faireFleur(Color.CYAN);
  recule(5);retourLigne(3,2);  
}


def faireFleur(c:Color){
  setCouleurBrosse(c:Color);
  for (i<- 1 to 3){
    colorie;avance;
  }
  recule;gauche;avance;colorie;recule;recule;colorie
  avance;setCouleurBrosse(Color.YELLOW);droite
}

def colorie{
  baisseBrosse;leveBrosse;
}

def avance(k:Int){
  for (i<- 1 to k){
    avance
  }
}

def recule(k){
  for (i<- 1 to k){
    recule;
  }
}

def retourLigne(k:Int,j:Int){
  for (i<-1 to k){
    recule
  }
  droite;
  for (j<- 1 to j){
    avance;
  }
  gauche;
}